--- a/bib-ro.bib
+++ b/bib-ro.bib
@@ -209,6 +209,12 @@ abstract = {Conceptualizing a population as a set of individuals linked together
   note={sociologic survey}
 }
 
+@misc{paqcovid,
+  author={PaQ},
+  title={Life during pandemics.},
+  year={2020},
+  note={sociologic survey}
+}
 
 @misc{Czinmotion,
   author={The Transport Research Centre - CDV},
@@ -279,7 +285,7 @@ abstract = {Conceptualizing a population as a set of individuals linked together
 	year = 2020
 }
 
-@article{Yang_etal2014_repeated,
+@article{Yang_etal2014,
 	author = {W. Yang and A. Karspeck and J. Shaman},
 	title = {Comparison of filtering methods for the modeling and retrospective forecasting of influenza epidemics},
 	journal = {PLoS Computational Biology}, 
@@ -320,7 +326,7 @@ abstract = {Conceptualizing a population as a set of individuals linked together
 	year = 2010
 }
 
-@article{Prem_etal2017_repeated,
+@article{Prem_etal2017,
 	author = {K. Prem and A. R. Cook and M. Jit},
 	title = {Projecting social contact matrices in 152 countries using contact surveys and demographic data},
 	journal = {PloS Computational Biology}, 
@@ -450,8 +456,7 @@ abstract = {Conceptualizing a population as a set of individuals linked together
   publisher={American Association for the Advancement of Science}
 }
 
-%commented out for duplicity
-article{danon2011networks,
+@article{danon2011networks,
   title={Networks and the epidemiology of infectious disease},
   author={Danon, Leon and Ford, Ashley P and House, Thomas and Jewell, Chris P and Keeling, Matt J and Roberts, Gareth O and Ross, Joshua V and Vernon, Matthew C},
   journal={Interdisciplinary perspectives on infectious diseases},
@@ -460,8 +465,7 @@ article{danon2011networks,
   publisher={Hindawi}
 }
 
-% commented out for duplicity
-article{luke2007network,
+@article{luke2007network,
   title={Network analysis in public health: history, methods, and applications},
   author={Luke, Douglas A and Harris, Jenine K},
   journal={Annu. Rev. Public Health},
@@ -490,8 +494,7 @@ article{luke2007network,
   publisher={Nature Publishing Group}
 }
 
-% commented out for duplicity
-article{vespignani2020modelling,
+@article{vespignani2020modelling,
   title={Modelling COVID-19},
   author={Vespignani, Alessandro and Tian, Huaiyu and Dye, Christopher and Lloyd-Smith, James O and Eggo, Rosalind M and Shrestha, Munik and Scarpino, Samuel V and Gutierrez, Bernardo and Kraemer, Moritz UG and Wu, Joseph and others},
   journal={Nature Reviews Physics},
@@ -522,9 +525,7 @@ article{vespignani2020modelling,
   publisher={Elsevier}
 }
 
-% commented out for duplicity
-
-article{squazzoni2020computational,
+@article{squazzoni2020computational,
   title={Computational models that matter during a global pandemic outbreak: A call to action},
   author={Squazzoni, Flaminio and Polhill, J Gareth and Edmonds, Bruce and Ahrweiler, Petra and Antosz, Patrycja and Scholz, Geeske and Chappin, {\'E}mile and Borit, Melania and Verhagen, Harko and Giardini, Francesca and others},
   journal={Journal of Artificial Societies and Social Simulation},
@@ -676,7 +677,7 @@ eprint = {
 
 	
 @article{kucharski2020effectiveness,
-	Author = {Adam Kucharski, Petra Klepac, Andrew Conlan, Stephen  Kissler, Maria  Tang, Hannah Fry, Julia Gog, John Edmunds},
+	Author = {Adam J Kucharski, Petra Klepac, Andrew J K Conlan, Stephen M Kissler, Maria L Tang, Hannah Fry, Julia R Gog, W John Edmunds},
 	Journal = {Lancet Infectious Diseases},
 	Pages = {1151-1160},
 	Title = {{Effectiveness of isolation, testing, contact tracing, and physical distancing on reducing transmission of SARS-CoV-2 in different settings: a mathematical modelling study}},
@@ -824,7 +825,7 @@ pages ={700-–721}
 
 @article{model-m-medrxiv,
 title = {Model-M: An agent-based epidemic model of a middle-sized municipality},
-author = {Lud\v{e}k Berec and Tom\'a\v{s} Divi\'ak and Ale\v{s} Kub\v{e}na and Ren\'e Lev\'\i nsk\'y and Roman Neruda and Gabriela Suchop\'arov\'a and Josef \v{S}lerka and Martin \v{S}m\'\i d and Jan Trnka and V\'\i t Tu\v{c}ek and Petra Vidnerov\'a and Milan Zaj\'\i\v{c}ek and Franti\v{s}ek Zapletal},
+author = {Lud\v{e}k Berec and Tom\'a\v{s} Divi\'ak and Ale\v{s} Kub\v{e}na and Ren\'e Lev\'{\i} nsk\'y and Roman Neruda and Gabriela Suchop\'arov\'a and Josef \v{S}lerka and Martin \v{S}m\'\i d and Jan Trnka and V\'{\i} t Tu\v{c}ek and Petra Vidnerov\'a and Milan Zaj\'{\i}\v{c}ek and Franti\v{s}ek Zapletal},
 note = {DOI: 10.1101/2021.05.13.21257139},
 year = {2021},
 publisher = {Cold Spring Harbor Laboratory Press},
