--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1394,6 +1394,14 @@ urldate = {26.3.2021},
 year = {2021}
 }
 
+@misc{BISOP-VZ-sireni-skoly,
+author = {{BISOP}},
+title = {{Výzkumná zpráva - BISOP vytvořil model šíření COVIDU-19 na základních školách}},
+url = {https://www.bisop.eu/vyzkumna-zpravabisop-vytvoril-model-sireni-covidu-19-na-zakladnich-skolach/},
+urldate = {30.2.2021},
+year = {2021}
+}
+
 
 
 @inbook{Ajzen1985,
