--- a/prispevky/010-Co_se_vi/main.tex
+++ b/prispevky/010-Co_se_vi/main.tex
@@ -1,52 +1,52 @@
-\chapter{Co dnes víme o covid-19} \label{Co_se_vi}
+\chapter{Co dnes víme o~covid-19} \label{Co_se_vi}
 
 \textit{Jan Trnka}
 \vspace{15mm}
 
-Poslední den roku 2019 informovaly místní úřady města Wu-chan v čínské provincii Chu-pej o tom, že se ve Wu-chanu objevilo několik lidí s neznámým typem zánětu plic (pneumonie) s poměrně závažným průběhem \cite{Gralinski:2020}. Zatímco se zprávy o nové nemoci a jejím spojení s místním trhem šířily světem (a zároveň se z Wu-chanu šířil i sám virus), čínští vědci a vědkyně izolovali z jednoho pacienta nový virus, který byl zařazen do skupiny koronavirů a označen jako \textit{2019-nCoV}, a posléze byla jeho přítomnost zjištěna i u dalších nemocných \cite{WHO:2020a}. Den po zveřejnění pravděpodobného původce nemoci (10. 1. 2020) již byla publikována i první sekvence virové RNA \cite{Zhang:2020a}. O týden později (17. 1. 2020) byly první případy zjištěny v Thajsku a Japonsku a bylo jasné, že již nebude možné virus zastavit.
+Poslední den roku 2019 informovaly místní úřady města Wu-chan v~čínské provincii Chu-pej o~tom, že se ve Wu-chanu objevilo několik lidí s~neznámým typem zánětu plic (pneumonie) s~poměrně závažným průběhem \cite{Gralinski:2020}. Zatímco se zprávy o~nové nemoci a jejím spojení s~místním trhem šířily světem (a zároveň se z~Wu-chanu šířil i sám virus), čínští vědci a vědkyně izolovali z~jednoho pacienta nový virus, který byl zařazen do skupiny koronavirů a označen jako \textit{2019-nCoV}, a posléze byla jeho přítomnost zjištěna i u~dalších nemocných \cite{WHO:2020a}. Den po zveřejnění pravděpodobného původce nemoci (10. 1. 2020) již byla publikována i první sekvence virové RNA \cite{Zhang:2020a}. O~týden později (17. 1. 2020) byly první případy zjištěny v~Thajsku a Japonsku a bylo jasné, že již nebude možné virus zastavit.
 
-O rok a půl později, kdy vzniká tento text, už víme o koronaviru SARS-CoV-2 i o onemocnění, které způsobuje, mnohem více než na počátku pandemie---a především jsme si vědomi globálního dopadu pandemie, která vedla k milionům úmrtí a těžkých případů s dlouhodobými následky a v neposlední řadě i k odhalení síly vědeckého výzkumu i problémů spojených s jeho pochopením i praktickou aplikací. Tento text se zaměří na to, co už o viru SARS-CoV-2 víme s vysokou mírou jistoty, ale pokusím se také zvýraznit ty oblasti, kde se vědecký konsenzus teprve vytváří a kde nejistota spojená s nedostatkem dat či vahou dřívějších paradigmat zpomalila snahy o vypořádání se se stále probíhající pandemií.
+O~rok a půl později, kdy vzniká tento text, už víme o~koronaviru SARS-CoV-2 i o~onemocnění, které způsobuje, mnohem více než na počátku pandemie---a především jsme si vědomi globálního dopadu pandemie, která vedla k~milionům úmrtí a těžkých případů s~dlouhodobými následky a v~neposlední řadě i k~odhalení síly vědeckého výzkumu i problémů spojených s~jeho pochopením i praktickou aplikací. Tento text se zaměří na to, co už o~viru SARS-CoV-2 víme s~vysokou mírou jistoty, ale pokusím se také zvýraznit ty oblasti, kde se vědecký konsenzus teprve vytváří a kde nejistota spojená s~nedostatkem dat či vahou dřívějších paradigmat zpomalila snahy o~vypořádání se se stále probíhající pandemií.
 
-Budu zde vycházet primárně z publikované literatury, která prošla recenzním řízením a je indexována v databázích PubMed, Web of Science nebo Scopus. Z pochopitelných důvodů množství publikovaných textů o koronavirech dramaticky narostlo v letech 2020 a 2021: v databází PubMed je v letech 1949 až 2019 indexováno 16\,452 článků vyhledatelných pomocí klíčového slova \textit{coronavirus}, v období 2020-2021 již 103\,293 (k 21. 5. 2021). V uplynulých dvou letech se z poněkud obskurní skupiny koronavirů stala dost možná skupina globálně nejznámější a nejzkoumanější.
+Budu zde vycházet primárně z~publikované literatury, která prošla recenzním řízením a je indexována v~databázích PubMed, Web of Science nebo Scopus. Z~pochopitelných důvodů množství publikovaných textů o~koronavirech dramaticky narostlo v~letech 2020 a 2021: v~databází PubMed je v~letech 1949 až 2019 indexováno 16\,452 článků vyhledatelných pomocí klíčového slova \textit{coronavirus}, v~období 2020-2021 již 103\,293 (k~21. 5. 2021). V~uplynulých dvou letech se z~poněkud obskurní skupiny koronavirů stala dost možná skupina globálně nejznámější a nejzkoumanější.
 
 \section*{Obecná charakteristika SARS-CoV-2}
 
-Virus SARS-CoV-2 (přesnější by bylo mluvit o skupině virů, jelikož se mutacemi původně jeden virus rozštěpil do mnoha stovek až tisíců blízce příbuzných variant) patří do skupiny obalených RNA virů s pozitivním vláknem, což znamená, že genetická informace viru je uložena v ribonukleové kyselině (RNA) oproti například lidským buňkám, které genetickou informaci stabilně drží v deoxyribonukleové kyselině (DNA) smotané do chromozomů buněčného jádra a kruhové mitochondriální DNA a jež RNA používají jako krátkodobě existující transportní formu informace (mRNA), jako součást ribozomů (rRNA) a adaptér pro syntézu proteinů z aminokyselin (tRNA) a pro některé další účely (miRNA apod.) RNA virů existuje obrovské množství a některé z nich způsobují u lidí nemoci, jako je chřipka, žlutá zimnice, hepatitida C nebo AIDS. Pozitivním (+) vláknem RNA je označen fakt, že virová RNA slouží přímo jako templát pro syntézu proteinů na ribozomech (tedy jako mRNA). To, že jde o obalený virus, znamená, že si virové částice s sebou nesou část buněčné membrány, kterou využívají jako součást své struktury. Tento lipidový obal pomáhá viru proniknout do buňky, ale zároveň je jeho Achillovou patou: snadno jej zničí mýdlo nebo koncentrovaný alkohol.
+Virus SARS-CoV-2 (přesnější by bylo mluvit o~skupině virů, jelikož se mutacemi původně jeden virus rozštěpil do mnoha stovek až tisíců blízce příbuzných variant) patří do skupiny obalených RNA virů s~pozitivním vláknem, což znamená, že genetická informace viru je uložena v~ribonukleové kyselině (RNA) oproti například lidským buňkám, které genetickou informaci stabilně drží v~deoxyribonukleové kyselině (DNA) smotané do chromozomů buněčného jádra a kruhové mitochondriální DNA a jež RNA používají jako krátkodobě existující transportní formu informace (mRNA), jako součást ribozomů (rRNA) a adaptér pro syntézu proteinů z~aminokyselin (tRNA) a pro některé další účely (miRNA apod.) RNA virů existuje obrovské množství a některé z~nich způsobují u~lidí nemoci, jako je chřipka, žlutá zimnice, hepatitida C nebo AIDS. Pozitivním (+) vláknem RNA je označen fakt, že virová RNA slouží přímo jako templát pro syntézu proteinů na ribozomech (tedy jako mRNA). To, že jde o~obalený virus, znamená, že si virové částice s~sebou nesou část buněčné membrány, kterou využívají jako součást své struktury. Tento lipidový obal pomáhá viru proniknout do buňky, ale zároveň je jeho Achillovou patou: snadno jej zničí mýdlo nebo koncentrovaný alkohol.
 
-SARS-CoV-2 byl podle své struktury a sekvence RNA zařazen do čeledi \textit{Coronaviridae}, rodu \textit{Betacoronavirus} a podrodu \textit{Sarbecovirus}, kam patří i déle známý původce onemocnění SARS (SARS-CoV-1) a některé další viry napadající netopýry \cite{Zhou:2020,Lu:2020a}. Nejbližším příbuzným viru SARS-CoV-2 je netopýří virus BatCoV RaTG13, což ukazuje na pravděpodobný původ nového koronaviru právě v těchto zvířatech \cite{Chan:2020,Hu:2021}. Většina známých koronavirů napadá převážně zvířata, avšak sedm koronavirů je známých jako původci onemocnění u člověka. Všechny dosud známé humánní koronaviry způsobují respirační onemocnění s příznaky od mírného nachlazení až po potenciálně závažné záněty průdušinek či plic \cite{Wevers:2009}.
+SARS-CoV-2 byl podle své struktury a sekvence RNA zařazen do čeledi \textit{Coronaviridae}, rodu \textit{Betacoronavirus} a podrodu \textit{Sarbecovirus}, kam patří i déle známý původce onemocnění SARS (SARS-CoV-1) a některé další viry napadající netopýry \cite{Zhou:2020,Lu:2020a}. Nejbližším příbuzným viru SARS-CoV-2 je netopýří virus BatCoV RaTG13, což ukazuje na pravděpodobný původ nového koronaviru právě v~těchto zvířatech \cite{Chan:2020,Hu:2021}. Většina známých koronavirů napadá převážně zvířata, avšak sedm koronavirů je známých jako původci onemocnění u~člověka. Všechny dosud známé humánní koronaviry způsobují respirační onemocnění s~příznaky od mírného nachlazení až po potenciálně závažné záněty průdušinek či plic \cite{Wevers:2009}.
 
-Řetězec RNA viru SARS-CoV-2 má délku necelých 30 000 bází a je z téměř 80\,\% totožný s virem způsobujícím onemocnění SARS (SARS-CoV-1). Ve virovém genomu najdeme šest hlavních otevřených čtecích rámců a několik menších genů. Ty kódují jak strukturální proteiny viru včetně známého S- neboli \textit{spike}-proteinu, tak nestrukturální proteiny, jako je například RNA-dependentní RNA polymeráza (zvaná též replikáza), která kopíruje virový genom \cite{Chan:2020}. Strukturální proteiny---\textit{Spike, Envelope, Membrane} a \textit{Nucleoprotein}, obvykle označované jen prvním písmenem názvu, tvoří spolu s virovou RNA virové částice (viriony), zatímco nestrukturální proteiny nejsou obsaženy přímo ve virových částicích, ale umožňují, aby došlo k úspěšné replikaci viru a správnému sestavení virionů uvnitř infikovaných buněk \cite{Mittal:2020}. Jelikož replikázy většiny RNA virů při kopírování RNA chybují, dochází u nich snadno k mutacím, které mohou umožnit virům adaptovat se na nové prostředí či nové hostitele, ale mohou také vést k vyhynutí viru. Koronaviry se však liší tím, že v replikačním komplexu využívají kontrolní funkce proteinu \textit{nsp14} a jejich mutační rychlost je výrazně nižší \cite{Robson:2020}.
+Řetězec RNA viru SARS-CoV-2 má délku necelých 30 000 bází a je z~téměř 80\,\% totožný s~virem způsobujícím onemocnění SARS (SARS-CoV-1). Ve virovém genomu najdeme šest hlavních otevřených čtecích rámců a několik menších genů. Ty kódují jak strukturální proteiny viru včetně známého S- neboli \textit{spike}-proteinu, tak nestrukturální proteiny, jako je například RNA-dependentní RNA polymeráza (zvaná též replikáza), která kopíruje virový genom \cite{Chan:2020}. Strukturální proteiny---\textit{Spike, Envelope, Membrane} a \textit{Nucleoprotein}, obvykle označované jen prvním pís\-me\-nem názvu, tvoří spolu s~virovou RNA virové částice (viriony), zatímco nestrukturální proteiny nejsou obsaženy přímo ve virových částicích, ale umožňují, aby došlo k~ú\-spěš\-né replikaci viru a správnému sestavení virionů uvnitř infikovaných buněk \cite{Mittal:2020}. Jelikož replikázy většiny RNA virů při kopírování RNA chybují, dochází u~nich snadno k~mutacím, které mohou umožnit virům adaptovat se na nové prostředí či nové hostitele, ale mohou také vést k~vyhynutí viru. Koronaviry se však liší tím, že v~replikačním komplexu využívají kontrolní funkce proteinu \textit{nsp14} a jejich mutační rychlost je výrazně nižší \cite{Robson:2020}.
 
-Virus SARS-CoV-2, podobně jako SARS-CoV-1, vstupuje do buňky vazbou na membránový protein ACE-2 (angiotenzin konvertující enzym-2), který se normálně účastní regulace krevního tlaku v hormonální dráze renin-angiotenzin-aldosteron \cite{Li:2017}. ACE-2 je u člověka poměrně rozšířený, nachází se ve velkém množství na buňkách ledvin, srdce a cév, zažívacího a dýchacího traktu, varlat a v dalších tkáních a naopak v poměrně malém množství na buňkách centrálního nervového systému \cite{Harmer:2002}. Předtím, než buňka navázaný virus vtáhne dovnitř pomocí regulovaného procesu endocytózy, však musí dojít k rozštěpení S-proteinu pomocí některé z membránových proteáz hostitelské buňky \cite{Hoffmann:2020}. Infikovány tak budou pouze buňky, které na svém povrchu vystavují jak ACE-2, tak některou z vhodných proteáz \cite{Murgolo:2021}.
+Virus SARS-CoV-2, podobně jako SARS-CoV-1, vstupuje do buňky vazbou na membránový protein ACE-2 (angiotenzin konvertující enzym-2), který se normálně účastní regulace krevního tlaku v~hormonální dráze renin-angiotenzin-aldosteron \cite{Li:2017}. ACE-2 je u~člověka poměrně rozšířený, nachází se ve velkém množství na buňkách ledvin, srdce a cév, zažívacího a dýchacího traktu, varlat a v~dalších tkáních a naopak v~poměrně malém množství na buňkách centrálního nervového systému \cite{Harmer:2002}. Předtím, než buňka navázaný virus vtáhne dovnitř pomocí regulovaného procesu endocytózy, však musí dojít k~rozštěpení S-proteinu pomocí některé z~membránových proteáz hostitelské buňky \cite{Hoffmann:2020}. Infikovány tak budou pouze buňky, které na svém povrchu vystavují jak ACE-2, tak některou z~vhodných proteáz \cite{Murgolo:2021}.
 
-Celý proces vstupu viru do buňky zatím není přesně popsán, ale po endocytóze a proteolytickém štěpení viru dojde k uvolnění virové RNA do cytoplazmy buňky, kde se naváže na ribozomy a zahájí se překlad genetické informace viru do proteinů \cite{Khan:2020}. Vzniklé proteiny pak dávají vzniknout dalším kopiím virové RNA, upravují ji tak, aby vypadala jako buněčná RNA, tlumí obranné funkce buněk a v neposlední řadě se skládají do nových virových částic, které jsou z infikované buňky uvolňovány do okolí. Virový "únos" buněčného metabolismu vede často ke zničení infikované buňky (cytopatický efekt).
+Celý proces vstupu viru do buňky zatím není přesně popsán, ale po endocytóze a proteolytickém štěpení viru dojde k~uvolnění virové RNA do cytoplazmy buňky, kde se naváže na ribozomy a zahájí se překlad genetické informace viru do proteinů \cite{Khan:2020}. Vzniklé proteiny pak dávají vzniknout dalším kopiím virové RNA, upravují ji tak, aby vypadala jako buněčná RNA, tlumí obranné funkce buněk a v~neposlední řadě se skládají do nových virových částic, které jsou z~infikované buňky uvolňovány do okolí. Virový \uv{únos} buněčného metabolismu vede často ke zničení infikované buňky (cytopatický efekt).
 
 Poškození infikovaných tkání a následná imunitní reakce organismu vedou ke vzniku příznaků onemocnění, které dostalo název \textit{coronovirus disease 2019}, zkráceně \textit{covid-19}.
 
 \section*{Onemocnění covid-19}
 
-Infekce virem SARS-CoV-2 se nejčastěji manifestuje jako respirační onemocnění s různou mírou závažnosti od nedetekovatelných či velmi mírných příznaků (asymptomatický či paucisymptomatický průběh) přes různé projevy zánětu horních a dolních dýchacích cest a pneumonii až po akutní respirační selhání, cytokinovou bouři a multiorgánové selhání, které může vést ke smrti. Nejčastějšími příznaky jsou zvýšená teplota až horečka, suchý kašel, dušnost, únava, nevolnost či zvracení a bolest svalů. U více než dvou třetin symptomatických nakažených dojde k poruchám čichu nebo chuti. U 3\,\% symptomatických infikovaných může být ztráta čichu nebo chuti jediným příznakem \cite{Xie:2020,Wiersinga:2020}. Na rozdíl od klinicky podobných respiračních onemocnění (např. chřipka) dochází u mnoha nemocných s covid-19 k dramatickým zánětlivým změnám nejen v samotných plicních sklípcích (kde dochází k napadení pneumocytů), ale i v přiléhajících plicních i vzdálenějších krevních cévách za vzniku krevních sraženin \cite{Ackermann:2020}. Související tromboembolické komplikace přispívají jak k plicní patologii a následné hypoxii \cite{McGonagle:2021}, tak ke komplikacím v jiných orgánových systémech včetně kardiovaskulárního a nervového \cite{Gupta:2020}.
+Infekce virem SARS-CoV-2 se nejčastěji manifestuje jako respirační onemocnění s~různou mírou závažnosti od nedetekovatelných či velmi mírných příznaků (asymptomatický či paucisymptomatický průběh) přes různé projevy zánětu horních a dolních dýchacích cest a pneumonii až po akutní respirační selhání, cytokinovou bouři a multiorgánové selhání, které může vést ke smrti. Nejčastějšími příznaky jsou zvýšená teplota až horečka, suchý kašel, dušnost, únava, nevolnost či zvracení a bolest svalů. U~více než dvou třetin symptomatických nakažených dojde k~poruchám čichu nebo chuti. U~3\,\% symptomatických infikovaných může být ztráta čichu nebo chuti jediným příznakem \cite{Xie:2020,Wiersinga:2020}. Na rozdíl od klinicky podobných respiračních onemocnění (např. chřipka) dochází u~mnoha nemocných s~covid-19 k~dramatickým zánětlivým změnám nejen v~samotných plicních sklípcích (kde dochází k~napadení pneumocytů), ale i v~přiléhajících plicních i vzdálenějších krevních cévách za vzniku krevních sraženin \cite{Ackermann:2020}. Související tromboembolické komplikace přispívají jak k~plicní patologii a následné hypoxii \cite{McGonagle:2021}, tak ke komplikacím v~jiných orgánových systémech včetně kardiovaskulárního a nervového \cite{Gupta:2020}.
 
-K rozvoji příznaků dochází v průměru okolo pátého dne po infekci \cite{Zhang:2020,Xie:2020} a u naprosté většiny infikovaných inkubační doba nepřekračuje 12 dnů \cite{Wiersinga:2020}. Klíčovou charakteristikou onemocnění covid-19, která umožnila jeho globální rozšíření, je fakt, že k vylučování viru, a tedy možnosti přenosu infekce, dochází již v období před vznikem příznaků (v presymptomatickém období), kdy infikovaní ještě nevědí, že v sobě již mají virus. \cite{Jones:2021} odhadují, že k vrcholu vylučování viru dochází v průměru 1-4 dny před rozvojem příznaků, což podtrhuje význam presymptomatického přenosu viru. Po 9.-10. dnu od začátku příznaků již nebylo možné u lidí s mírným průběhem covid-19 izolovat infekční virus \cite{Wolfel:2020,Jones:2021}, 
-i když PCR pozitivita může přetrvávat ještě mnoho dnů i týdnů poté \cite{Byrne:2020}. U těžších případů covid-19 může u menšiny infikovaných trvat vylučování infekčních virových částic i 15 a více dnů od prvních příznaků \cite{Kampen:2021} Podíl opravdu asymptomatických infikovaných, tedy těch, u nichž nedojde k rozvoji klinických příznaků po celou dobu infekce, není snadné odhadnout, neboť vyžaduje v podstatě kompletní otestování náhodně vybrané kohorty a její následné sledování. K tomu došlo na lodi Diamond Princess, kde byl podíl asymptomatických nakažených 17,9\,\% (96\%CI 15,5-20,2\,\%) \cite{Mizumoto:2020}. Většina ostatních odhadů se pohybuje někde kolem 20\,\%, ale objevily se i vyšší odhady \cite{Yanes-Lane:2020}, které jsou však často způsobeny spojením presymptomatických či paucisymptomatických případů spolu s opravdu trvale asymptomatickými.
+K~rozvoji příznaků dochází v~průměru okolo pátého dne po infekci \cite{Zhang:2020,Xie:2020} a u~naprosté většiny infikovaných inkubační doba nepřekračuje 12 dnů \cite{Wiersinga:2020}. Klíčovou charakteristikou onemocnění covid-19, která umožnila jeho globální rozšíření, je fakt, že k~vylučování viru, a tedy možnosti přenosu infekce, dochází již v~období před vznikem příznaků (v~presymptomatickém období), kdy infikovaní ještě nevědí, že v~sobě již mají virus. \cite{Jones:2021} odhadují, že k~vrcholu vylučování viru dochází v~průměru 1-4 dny před rozvojem příznaků, což podtrhuje význam presymptomatického přenosu viru. Po 9.-10. dnu od začátku příznaků již nebylo možné u~lidí s~mírným průběhem covid-19 izolovat infekční virus \cite{Wolfel:2020,Jones:2021}, 
+i když PCR pozitivita může přetrvávat ještě mnoho dnů i týdnů poté \cite{Byrne:2020}. U~těžších případů covid-19 může u~menšiny infikovaných trvat vylučování infekčních virových částic i 15 a více dnů od prvních příznaků \cite{Kampen:2021} Podíl opravdu asymptomatických infikovaných, tedy těch, u~nichž nedojde k~rozvoji klinických příznaků po celou dobu infekce, není snadné odhadnout, neboť vyžaduje v~podstatě kompletní otestování náhodně vybrané kohorty a její následné sledování. K~tomu došlo na lodi Diamond Princess, kde byl podíl asymptomatických nakažených 17,9\,\% (96\%CI 15,5-20,2\,\%) \cite{Mizumoto:2020}. Většina ostatních odhadů se pohybuje někde kolem 20\,\%, ale objevily se i vyšší odhady \cite{Yanes-Lane:2020}, které jsou však často způsobeny spojením presymptomatických či paucisymptomatických případů spolu s~opravdu trvale asymptomatickými.
 
-Nemalá část těch, kdo prodělali akutní onemocnění, pociťuje po virologickém uzdravení (tedy po skončení PCR pozitivity) nadále příznaky, které se označují jak postcovidový syndrom. Přetrvávající příznaky byly v různých studiích detekovány dva až šest měsíců po propuštení z nemocnice u 30-85\,\% pacientů a pacientek. Velmi častými příznaky postcovidového syndromu jsou únava, dušnost, bolesti kloubů, bolest na hrudi, kašel, přetrvávající ztráta čichu nebo chuti, ale i neuropsychiatrické příznaky jako úzkost, posttraumatická stresová porucha, deprese, poruchy spánku či kognitivní poruchy \cite{Nalbandian:2021}. Patogeneze postcovidového syndromu není ještě do detailů popsána, ale podílí se na ní kromě přímého cytopatického účinku viru také poškození cévního endotelu, které spolu s poruchami koagulace vede ke vzniku krevních sraženin a jejich embolizaci, dysregulace imunitního systému a potenciálně i porucha renin-angiotensin-aldosteronového hormonálního systému \cite{Gupta:2020}. Výzkum postcovidového syndromu je teprve v počátcích, avšak vzhledem k jeho relativně vysoké prevalenci po prodělání akutního onemocnění covid-19 půjde do budoucna o velmi závažný zdravotnický problém, na který se zapomíná při sčítání dosavadních dopadů pandemie.
+Nemalá část těch, kdo prodělali akutní onemocnění, pociťuje po virologickém uzdravení (tedy po skončení PCR pozitivity) nadále příznaky, které se označují jak postcovidový syndrom. Přetrvávající příznaky byly v~různých studiích detekovány dva až šest měsíců po propuštení z~nemocnice u~30-85\,\% pacientů a pacientek. Velmi častými příznaky postcovidového syndromu jsou únava, dušnost, bolesti kloubů, bolest na hrudi, kašel, přetrvávající ztráta čichu nebo chuti, ale i neuropsychiatrické příznaky jako úzkost, posttraumatická stresová porucha, deprese, poruchy spánku či kognitivní poruchy \cite{Nalbandian:2021}. Patogeneze postcovidového syndromu není ještě do detailů popsána, ale podílí se na ní kromě přímého cytopatického účinku viru také poškození cévního endotelu, které spolu s~poruchami koagulace vede ke vzniku krevních sraženin a jejich embolizaci, dysregulace imunitního systému a potenciálně i porucha renin-angiotensin-aldosteronového hormonálního systému \cite{Gupta:2020}. Výzkum postcovidového syndromu je teprve v~počátcích, avšak vzhledem k~jeho relativně vysoké prevalenci po prodělání akutního onemocnění covid-19 půjde do budoucna o~velmi závažný zdravotnický problém, na který se zapomíná při sčítání dosavadních dopadů pandemie.
 
-Zvláštní kapitolou je pak průběh covid-19 u dětí. I když se často setkáváme s pohledem, že dětí se covid-19 prakticky netýká, provedené studie ukazují dosti odlišný obrázek. Již na samém začátku pandemie se ukázalo, že jen malá menšina dětí nemá vůbec žádné příznaky, a dokonce i nemalá část dětí bez klinických příznaků měla radiologický nález pneumonie. Nejčastějším klinickým příznakem byla horečka následovaná kašlem a zčervenámím hltanu \cite{Lu:2020b}. I když je u dětí průběh covid-19 většinou mírný s velmi dobrou prognózou, již v polovině prvního roku pandemie byl popsán v pediatrické populaci závažný následek infekce covid-19 nazvaný multisystémový zánětlivý syndrom u dětí, MIS-C \cite{Feldstein:2020}. Jde o relativně málo častý syndrom klinicky podobný vaskulitidě známé jako Kawasakiho nemoc. Klinické příznaky MIS-C zahrnují horečku, bolesti břicha, zvracení, průjem, postižení kardiovaskulárního systému se projevuje tachykardií, hypotenzí až hemodynamickým šokem, myokarditidou a poruchami funkce levé komory, dále se objevují respirační příznaky včetně dušnosti a poruchy krevní srážlivosti s tromboembolickými komplikacemi \cite{Hoste:2021}. Syndrom MIS-C vyžaduje u většiny nemocných intenzivní nemocniční péči a umírá na něj okolo 2\,\% nemocných \cite{Hoste:2021}.
+Zvláštní kapitolou je pak průběh covid-19 u~dětí. I~když se často setkáváme s~pohledem, že dětí se covid-19 prakticky netýká, provedené studie ukazují dosti odlišný obrázek. Již na samém začátku pandemie se ukázalo, že jen malá menšina dětí nemá vůbec žádné příznaky, a dokonce i nemalá část dětí bez klinických příznaků měla radiologický nález pneumonie. Nejčastějším klinickým příznakem byla horečka následovaná kašlem a zčervenámím hltanu \cite{Lu:2020b}. I~když je u~dětí průběh covid-19 většinou mírný s~velmi dobrou prognózou, již v~polovině prvního roku pandemie byl popsán v~pediatrické populaci závažný následek infekce covid-19 nazvaný multisystémový zánětlivý syndrom u~dětí, MIS-C \cite{Feldstein:2020}. Jde o~relativně málo častý syndrom klinicky podobný vaskulitidě známé jako Kawasakiho nemoc. Klinické příznaky MIS-C (alternativně PIMS) zahrnují horečku, bolesti břicha, zvracení, průjem, postižení kardiovaskulárního systému se projevuje tachykardií, hypotenzí až hemodynamickým šokem, myokarditidou a poruchami funkce levé komory, dále se objevují respirační příznaky včetně dušnosti a poruchy krevní srážlivosti s~tromboembolickými komplikacemi \cite{Hoste:2021}. Syndrom MIS-C vyžaduje u~většiny nemocných intenzivní nemocniční péči a umírá na něj okolo 2\,\% nemocných \cite{Hoste:2021}.
 
-Nejvýznamnějším prediktorem těžkého průběhu, či dokonce úmrtí na covid-19 je věk nakažených, kdy riziko úmrtí roste zhruba exponenciálně s přibývajícími roky od tisícin procenta u nejmladších věkových kategorií až po desítky procent v těch nejvyšších \cite{ODriscoll:2020}. Odhadnout celkovou smrtnost, tedy poměr úmrtí na covid-19 k počtu všech nakažených, je velmi komplikované, neboť v naprosté většině situací neznáme ani celkový počet nakažených, ani nevíme o všech úmrtích spojených s covid-19. Existující odhady udávají smrtnost někde mezi 0,5-1\,\% \cite{Meyerowitz-Katz:2020}. Mnohem snadněji měřitelným parametrem je takzvané \textit{case-fatality rate}, CFR neboli poměr (známých) úmrtí k počtu známých případů infekce. CFR se liší v různých zemích i regionech a také v čase a jeho aktuální i historické hodnoty lze nalézt na webových stránkách věnovaných statistikám epidemie \cite{owidcoronavirus}. CFR pro celý svět je v době psaní tohoto textu (květen 2021) na hodnotě 2,08\,\%.
+Nejvýznamnějším prediktorem těžkého průběhu, či dokonce úmrtí na covid-19 je věk nakažených, kdy riziko úmrtí roste zhruba exponenciálně s~přibývajícími roky od tisícin procenta u~nejmladších věkových kategorií až po desítky procent v~těch nejvyšších \cite{ODriscoll:2020}. Odhadnout celkovou smrtnost, tedy poměr úmrtí na covid-19 k~počtu všech nakažených, je velmi komplikované, neboť v~naprosté většině situací neznáme ani celkový počet nakažených, ani nevíme o~všech úmrtích spojených s~covid-19. Existující odhady udávají smrtnost někde mezi 0,5-1\,\% \cite{Meyerowitz-Katz:2020}. Mnohem snadněji měřitelným parametrem je takzvané \textit{case-fatality rate}, CFR neboli poměr (známých) úmrtí k~počtu známých případů infekce. CFR se liší v~různých zemích i regionech a také v~čase a jeho aktuální i historické hodnoty lze nalézt na webových stránkách věnovaných statistikám epidemie \cite{owidcoronavirus}. CFR pro celý svět je v~době psaní tohoto textu (květen 2021) na hodnotě 2,08\,\%.
 
 \section*{Jak se virus šíří}
-Přesné popsání způsobu přenosu infekčního agens je zásadní pro volbu účinných protiepidemických opatření. V případě covid-19 ale trvalo pozoruhodně dlouho, než v této věci došlo k vědeckému konsenzu. Hned první doporučení Světové zdravotnické organizace (WHO) pro bezpečnou péči o nakažené z 10. 1. 2020 sáhlo k dřívějším doporučením pro příbuzná onemocnění SARS a MERS \cite{WHO:2014} a na základě převládajícího přesvědčení, že se respirační onemocnění přenáší především pomocí kapének a přímého kontaktu, zavedlo pro pacienty minimálně jednometrové odstupy, krytí úst a nosu při kýchání a kašlání a tam, kde to je možné, použití ústenek (masek) a pro zdravotnický personál masku, ochranu očí či obličeje, jednorázový plášť a rukavice. Doporučení obsahovalo i upozornění na možnost vzniku infekčních aerosolů při některých zdravotnických výkonech (intubace, resuscitace apod.) a zde WHO doporučila použití respirátorů a ochrany očí/obličeje \cite{WHO:2020b}. Jelikož kapénky produkované především při kýchání a kašlání klesají rychle k zemi, funguje takový přenos na poměrně krátké vzdálenosti (maximálně dva metry), a proto se hlavním protiepidemickým doporučením pro celý svět stala kombinace 1-2metrového odstupu a pečlivého mytí rukou, na které mohly infekční kapénky dopadnout. Přenos na větší vzdálenosti nebyl považován za možný, nebo alespoň za významný.
+Přesné popsání způsobu přenosu infekčního agens je zásadní pro volbu účinných protiepidemických opatření. V~případě covid-19 ale trvalo pozoruhodně dlouho, než v~této věci došlo k~vědeckému konsenzu. Hned první doporučení Světové zdravotnické organizace (WHO) pro bezpečnou péči o~nakažené z~10. 1. 2020 sáhlo k~dřívějším doporučením pro příbuzná onemocnění SARS a MERS \cite{WHO:2014} a na základě převládajícího přesvědčení, že se respirační onemocnění přenáší především pomocí kapének a přímého kontaktu, zavedlo pro pacienty minimálně jednometrové odstupy, krytí úst a nosu při kýchání a kašlání a tam, kde to je možné, použití ústenek (masek) a pro zdravotnický personál masku, ochranu očí či obličeje, jednorázový plášť a rukavice. Doporučení obsahovalo i upozornění na možnost vzniku infekčních aerosolů při některých zdravotnických výkonech (intubace, resuscitace apod.) a zde WHO doporučila použití respirátorů a ochrany očí/obličeje \cite{WHO:2020b}. Jelikož kapénky produkované především při kýchání a kašlání klesají rychle k~zemi, funguje takový přenos na poměrně krátké vzdálenosti (maximálně dva metry), a proto se hlavním protiepidemickým doporučením pro celý svět stala kombinace 1-2metrového odstupu a pečlivého mytí rukou, na které mohly infekční kapénky dopadnout. Přenos na větší vzdálenosti nebyl považován za možný, nebo alespoň za významný.
 
-V červenci 2020 byla publikována veřejná výzva 239 vědců a vědkyň, kteří na základě množících se indicií svědčících pro přenos viru SARS-CoV-2 vzduchem na mnohem větší vzdálenosti, než by odpovídalo kapénkové teorii přenosu, žádali národní i mezinárodní autority, aby uznaly možnost vzdušného přenosu a podle toho doplnily protiepidemická doporučení o důkladné větrání vnitřních prostor, čištění a dezinfekci vzduchu a bránění přeplnění uzavřených prostor \cite{Morawska:2020}. Jen pár dní po této výzvě vydala WHO zprávu, v níž konstatuje, že nelze vyloučit vzdušný přenos na krátké vzdálenosti v přeplněných místnostech, ale že je tento způsob přenosu třeba dále zkoumat \cite{WHO:2020c}. Světová zdravotnická organizace na dopis reagovala prohlášením, že se bude záležitostí zabývat, avšak teprve 30. dubna 2021 na svých webových stránkách uznala možnost vzdušného přenosu na delší vzdálenosti. Stejně tak již možnost vzdušného přenosu uznává i Centrum pro kontrolu nemocí USA (CDC) i jeho evropský ekvivalent ECDC.
+V~červenci 2020 byla publikována veřejná výzva 239 vědců a vědkyň, kteří na základě množících se indicií svědčících pro přenos viru SARS-CoV-2 vzduchem na mnohem větší vzdálenosti, než by odpovídalo kapénkové teorii přenosu, žádali národní i mezinárodní autority, aby uznaly možnost vzdušného přenosu a podle toho doplnily protiepidemická doporučení o~důkladné větrání vnitřních prostor, čištění a dezinfekci vzduchu a bránění přeplnění uzavřených prostor \cite{Morawska:2020}. Jen pár dní po této výzvě vydala WHO zprávu, v~níž konstatuje, že nelze vyloučit vzdušný přenos na krátké vzdálenosti v~přeplněných místnostech, ale že je tento způsob přenosu třeba dále zkoumat \cite{WHO:2020c}. Světová zdravotnická organizace na dopis reagovala prohlášením, že se bude záležitostí zabývat, avšak teprve 30. dubna 2021 na svých webových stránkách uznala možnost vzdušného přenosu na delší vzdálenosti. Stejně tak již možnost vzdušného přenosu uznává i Centrum pro kontrolu nemocí USA (CDC) i jeho evropský ekvivalent ECDC.
 
-Přenos viru SARS-CoV-2 tedy podle současných poznatků probíhá jak většími kapénkami přenesenými na krátkou vzdálenost při kašli či kýchání, tak menšími částicemi produkovanými při mluvení, zpívání apod., které mohou zůstávat ve vzduchu delší dobu a šířit se na delší vzdálenosti \cite{Leung:2021}. Virus může být přenesen i přímým kontaktem s infikovaným člověkem. Odtud by se měla odvíjet příslušná protiepidemická opatření.
+Přenos viru SARS-CoV-2 tedy podle současných poznatků probíhá jak většími kapénkami přenesenými na krátkou vzdálenost při kašli či kýchání, tak menšími částicemi produkovanými při mluvení, zpívání apod., které mohou zůstávat ve vzduchu delší dobu a šířit se na delší vzdálenosti \cite{Leung:2021}. Virus může být přenesen i přímým kontaktem s~infikovaným člověkem. Odtud by se měla odvíjet příslušná protiepidemická opatření.
 
 
 
 \section*{Diskuse}
-Covid-19 a jeho původce SARS-CoV-2 byl poprvé detekován před půldruhým rokem, ale díky obrovskému nasazení vědců a vědkyň z celého světa (a jistě i kvůli globálnímu a velmi ničivému dopadu pandemie) dnes víme o nemoci i viru opravdu hodně. Některé poznatky přišly velmi rychle, například genetické a molekulárně-biologické charakteristiky viru, kde pomohla rychlost a široká dostupnost potřebných metod a hlavně velké množství již existujících poznatků o koronavirech, naopak nejsložitější bylo přesné poznání některých epidemiologických a klinických poznatků, které vyžadují velké množství dat o lidech. Rychlost získávání poznatků o covid-19 je v historii lidstva bezprecedentní a umožnila bleskový vývoj molekulárně-biologických diagnostických metod a jen o málo pomalejší konstrukci prvních vakcín. Stále toho však nevíme dost v oblasti léčby akutního onemocnění covid-19 či zvládání postcovidového syndromu. Nevíme přesně, proč je vyšší věk zásadním rizikovým faktorem pro těžký průběh covid-19, neznáme ještě všechny detaily imunitní odpovědi na SARS-CoV-2 ani délku trvání ochrany, kterou přináší.
+Covid-19 a jeho původce SARS-CoV-2 byl poprvé detekován před půldruhým rokem, ale díky obrovskému nasazení vědců a vědkyň z~celého světa (a jistě i kvůli globálnímu a velmi ničivému dopadu pandemie) dnes víme o~nemoci i viru opravdu hodně. Některé poznatky přišly velmi rychle, například genetické a molekulárně-biologické charakteristiky viru, kde pomohla rychlost a široká dostupnost potřebných metod a hlavně velké množství již existujících poznatků o~koronavirech, naopak nejsložitější bylo přesné poznání některých epidemiologických a klinických poznatků, které vy\-ža\-du\-jí velké množství dat o~lidech. Rychlost získávání poznatků o~covid-19 je v~historii lidstva bezprecedentní a umožnila bleskový vývoj molekulárně-biologických diagnostických metod a jen o~málo pomalejší konstrukci prvních vakcín. Stále toho však nevíme dost v~oblasti léčby akutního onemocnění covid-19 či zvládání postcovidového syndromu. Nevíme přesně, proč je vyšší věk zásadním rizikovým faktorem pro těžký průběh covid-19, neznáme ještě všechny detaily imunitní odpovědi na SARS-CoV-2 ani délku trvání ochrany, kterou přináší.
 
-Snad se jako lidstvo poučíme nejen z vědeckých úspěchů, ale hlavně z neúspěchů, které doprovázely a patrně ještě budou doprovázet naši odpověď na první velkou pandemii 21. století, neboť můžeme téměř s jistotou říct, že nebude poslední.
+Snad se jako lidstvo poučíme nejen z~vědeckých úspěchů, ale hlavně z~neúspěchů, které doprovázely a patrně ještě budou doprovázet naši odpověď na první velkou pandemii 21. století, neboť můžeme téměř s~jistotou říct, že nebude poslední.
 
