--- a/prispevky/000-uvod/main.tex
+++ b/prispevky/000-uvod/main.tex
@@ -1,44 +1,36 @@
+\addcontentsline{toc}{chapter}{Úvod}
 \chapter*{Úvod}
 
-\textit{Martin \v Sm\'\i d, BISOP}
+\textit{Tomáš Diviák, Martin \v Sm\'\i d, René Levínský, BISOP}
 \vspace{15mm}
 
-Když začne hořet dům, každý jde hasit. Na počátku pandemie tak mělo mnoho lidí potřebu nějak se situací pomoci. Někdo šil roušky, někdo pomáhal izolovaným seniorům, někdo se snažil sbírat a zveřejňovat data. Přesto málokoho z vědců ne-epidemiologů napadlo, že by jejich angažmá mohlo být užitečné. Vláda má přece jistě dost svých odborníků a sofistikovaných modelů! Když se však začalo proslýchat, že odborníkem, který přesvědčil vládu k rychlé reakci, byl manažer pojišťovny Pavel Řehák, a to za pomoci excelovské tabulky, začalo být jasné, že jakákoli nevládní aktivita je namístě.
+Během 21. století se ve světě objevila řada velice nebezpečných a potenciálně pandemických onemocnění. Byly jimi například ptačí chřipka, prasečí chřipka, SARS či Ebola. Žádná z těchto epidemií však Českou republiku výrazně nezasáhla, a česká veřejnost tak mohla nabýt dojmu, že se jí takovéto situace netýkají a nejsou pro ni závažným rizikem. To se ale zásadně změnilo na přelomu roku 2019 a 2020, když se z čínského města Wu-chan začal rapidně šířit koronavirus SARS-CoV-2 způsobující respirační onemocnění, pro něž se brzy ujal název covid-19.
 
-Během prvních týdnů pandemie vzniklo několik vědeckých iniciativ, mezi nimi i iniciativa {\em Model antiCOVID-19 pro ČR}, která si dala za cíl tvorbu realistických modelů šíření epidemie. Postupně začaly vznikat tři takové modely: globální Model A, podrobnější Model B a tzv. agentní model, který dostal označení M, protože popisoval šíření epidemie ve středně velkém městě. Hlavní ambicí iniciativy bylo využití modelů a jejich predikcí jako podpory rozhodování o protiepidemických opatřeních. 
+Když mezi 10. a 14. březnem 2020 začala vláda České republiky postupně zavádět protipandemická opatření kvůli obavám z rychlého šíření nového koronaviru, asi jen málokoho by napadlo, že i po téměř dvou letech bude covid-19 a pandemická situace stále ústředním tématem ve veřejném prostoru a hlavním globálním problémem. Česko si v mezičase prošlo počátečním vzepětím solidarity a vzájemné pomoci, několika silnými vlnami pandemie s desítkami tisíc obětí, vystřídáním pěti ministrů zdravotnictví, rozsáhlou vakcinační kampaní, ale také narůstajícím odporem vůči vakcinaci a dalším opatřením a také jejich negativními ekonomickými následky. Původní virus se mezitím šířil a mutoval v nakažlivější a nebezpečnější varianty (alfa a delta) a v současnosti, tedy na samém sklonku roku 2021, stojí otazník nad variantou omikron a nejasnou vidinou naděje na definitivní konec pandemie.
 
-Pod vedením Reného Levínského a Josefa Šlerky se shromáždil malý tým, většina jehož členů měla zkušenosti s matematickým modelováním. Všichni si uvědomovali, že vstupují do neznámých vod, nicméně tehdejší atmosféra, která podobným iniciativám přála, je ke vstupu na neznámou půdu motivovala. První verze modelů vznikly na vědecké poměry velice rychle, takže mohly být představeny už koncem května na konferenci NZIS Open\footnote{\url{https://www.uzis.cz/index.php?pg=aktuality&aid=8399}}. Tam se mimo jiné ukázalo, že skupina ve svém úsilí není osamocena: své nově vyvinuté modely tu představila jak skupina Lenky Přibylové z Masarykovy univerzity, tak státní Ústav zdravotnických informací a statistiky. 
+Přes závažnost zdravotních rizik a jejich následků, se kterými se covid-19 pojí, nelze toto onemocnění ani zdaleka omezit na ryze zdravotnický problém. Pandemie je totiž mnohovrstevnatý jev, který má nejen rovinu zdravotní, ale i rovinu sociální, politickou, ekonomickou a vědeckou. Pandemie tak neovlivňuje jen přímo nakažené a zdravotníky o ně pečující, nýbrž celou společnost, kterou zasahují protiepidemická opatření a ta se obratem promítají do sféry ekonomické a politické, přičemž se všechny tyto aspekty snaží, leckdy poněkud klopýtavě, postihnout věda. Právě snaha vědecky postihnout pandemii a snahy o její potlačení byly hlavním impulzem i pro vznik Centra pro modelování biologických a sociálních procesů (BISOP), z jehož činnosti vychází i kniha, kterou právě držíte v ruce.
 
-Nezávisle na modelovacím týmu se v prvních týdnech pandemie zformovala skupina dobrovolníků okolo zmíněného Pavla Řeháka, Pavla Hroboně, Jakuba Drbohlava a Evy Blechové, snažící se vládě pomoci zavést takzvanou chytrou karanténu, zejména nastavit efektivní systém trasování rizikových kontaktů. Na konci května, kdy se mnohým zdálo, že epidemie končí, zformulovala skupina materiál {\em Systém rychlé reakce na případnou druhou vlnu covid-19 a další epidemie}\footnote{\url{https://texty.hlidacstatu.cz/system-rychle-reakce-na-pripadnou-druhou-vlnu-covid-19-a-dalsi-epidemie/}}, ve kterém navrhla 32 kroků, které měly zemi připravit na očekávanou podzimní vlnu. 
-
-Spojením „trasovací“ a „modelovací“ skupiny pak v létě 2020 vzniklo Centrum pro modelování biologických a společenských procesů (BISOP). Formálně jde o zapsaný ústav, prakticky o platformu zastřešující spolupráci skupiny, jejíž členové 
-se účastní buď jako dobrovolníci, nebo spolupráci spojují s aktivitami ve svých domovských institucích. 
-
-Hned po svém vzniku se Centrum pro modelování biologických a společenských procesů zapojilo do celospolečenské diskuse, ať již se jednalo o popularizaci vědeckého přístupu k pandemii či o konkrétní otázky týkající se vývoje epidemie a vlivu protiepidemických opatření, později též očkování. René Levínský se podílel na přípravě protiepidemického systému PES a byl jedním z členů Mezioborové skupiny pro epidemické situace (MESES). Hlas BISOP, propagující vědecký přístup, byl v médiích nepřeslechnutelný. Jako nezanedbatelný přínos skupiny lze vidět i její multidisciplinaritu, tedy to,  že její výstupy vznikaly jako výsledek diskuse představitelek a představitelů různých oborů.
-
-Názory členů BISOP zněly i v tehdejších zjitřených diskusích, ať už s jednotlivci či skupinami zpochybňujícími hlavní proud vědeckého poznání nebo se zastánci promoření -- BISOP v době, kdy nebylo dostupné očkování, důsledně zastával strategii omezování množství viru v populaci. Působení BISOP se však poněkud překvapivě stalo terčem kritiky i ze strany části vědecké obce, zejména kvůli údajné neprověřenosti používaných modelů a postupů. 
-
-Co se týče vědeckého přístupu a otázky promoření, dává čas členům BISOP postupně za pravdu: různá „alternativní fakta“, jako například tvrzení o zázračnosti ivermektinu nebo o škodlivosti roušek jsou postupně vyvracena a také se ukazuje, že zavádění opatření až v okamžiku zahlcení zdravotnictví vedlo ke zbytečným ekonomickým a lidským ztrátám. Kritiku „rychlé vědy“ je však potřeba nebrat na lehkou váhu a v konkrétních situacích vždy zvažovat, zda čekat na nezpochybnitelné ověření nebo zda jednat. V situaci roku 2020, kdy měla vláda tendenci naslouchat výše zmíněným „alternativám“, byla druhá možnost evidentně tou správnou volbou.
-
-Kniha, kterou držíte v ruce, je sborníkem příspěvků z konference Poučení z pandemie COVID-19 konané v polovině června 2021,\footnote{\url{https://www.bisop.eu/konference-pouceni-z-pandemie-covid-19/}} která si kladla za cíl shrnout aktivity Centra pro modelování biologických a společenských procesů po dobu pandemie. Podobně jako se BISOP celou dobu snažil pokrýt co nejvíce aspektů a nahlížet na ně z různých pohledů, tak se i tento text dotýká mnoha témat a zpracovává je mnoha různými způsoby.
-
-{\em Kapitola 1. Co dnes víme o nemoci covid-19} představuje hlavní postavu dramatu -- nemoc covid-19 -- z pohledu lékařské vědy.
-{\em Kapitola 2. Fungují opatření? Korelace versus kauzalita} je reflexí výše zmíněné „války vědeckých faktů“: připomíná, jak obtížné je dokázat příčinnost (kauzalitu), a popisuje, jak se k tomuto problému staví hlavní vědecký proud. {\em Kapitola 3. Senátní volby jako přirozený experiment} se zabývá otázkou, do jaké míry mohl fakt voleb zvýšit počet případů covid-19, přičemž využívá fakt, že se volby konají jen v náhodně vybrané třetině okrsků, což vytváří pro zkoumání unikátní podmínky, které jsou jinak dosažitelné jen při kontrolovaných experimentech.
-
-{\em Kapitola 4. Matematické modelování epidemií: historie a současnost} popisuje základní principy, na nichž stojí většina epidemiologických modelů.
-{\em kapitola 5. Epidemiologické modely s agenty} pak pojednává o modelech, které se z těchto principů do jisté míry vymykají, neboť namísto souhrnných počtů pracují s nakaženými jako s jednotlivci. {\em Kapitola 6. Automatická tvorba grafu kontaktů}, {\em Kapitola 7. Simulace epidemiologických opatření v multiagentním modelu} a {\em Kapitola 8. Simulace opatření ve školním prostředí} pak popisují konstrukci a využití agentního modelu, vyvíjeného týmem BISOP.
-
-Další tři kapitoly se věnují očkování. {\em Kapitola 9. Vakcinace pohledem matematických modelů} ukazuje, jak lze očkování pojmout v rámci matematických modelů a co o něm tyto modely mohou říct, {\em kapitola 10. Logistika očkování a prioritní skupiny} popisuje očkovací kampaň v České republice a snaží se odpovědět na otázku, zda byla prováděna optimálně, {\em kapitola 11. Dosáhneme kolektivní imunity očkováním?} se snaží odhadnout, jaké procento populace bude muset být očkováno, aby se země vyhnula podzimní epidemické vlně.
-
-Další kapitoly se věnují konkrétním aspektům dění okolo pandemie. 
-{\em Kapitola 12. Systém trasování v ČR: efektivita, reporting a (ne)využívání dat} reflektuje použití jedné z nejúčinnějších zbraní proti pandemii: sledování rizikových kontaktů nakažených, {\em kapitola 13. Compliance jako klíčový parametr průběhu pandemie} se zabývá ochotou občanů dodržovat protiepidemická opatření, {\em kapitola 14. Život během pandemie: Chování, kontakty a jejich proměny} nahlíží pandemii ze sociologického hlediska, {\em kapitola 15. Ekonomické aspekty pandemie} hodnotí dopady pandemie na hospodářství České republiky.
-
-Poslední {\em kapitola 16: Současné výzvy vyžadují reformu způsobu vládnutí} se zamýšlí nad problémy v řízení státu, které situace okolo pandemie odhalila, a naznačuje jejich možná budoucí řešení.
+Historie centra BISOP sahá až do prvních týdnů pandemie, kdy vznikla iniciativa {\em Model antiCOVID-19 pro ČR}, jež si dala za cíl tvorbu realistických modelů šíření epidemie. Hlavní ambicí iniciativy bylo využití modelů a jejich predikcí jako podpory rozhodování o~protiepidemických opatřeních. V rámci této iniciativy se pod vedením Reného Levínského a Josefa Šlerky shromáždil malý tým, který začal pracovat na globálním Modelu A, podrobnějším Modelu B a na agentním modelu, který dostal označení M, protože popisoval šíření epidemie ve středně velkém městě. Práce postupovaly díky tehdejší zjitřené atmosféře rychle, takže mohly být první verze modelů představeny už koncem května na konferenci NZIS Open\footnote{\url{https://www.uzis.cz/index.php?pg=aktuality&aid=8399}}. Tam se mimo jiné ukázalo, že skupina ve svém úsilí není osamocena: své nově vyvinuté modely tu představila jak skupina Lenky Přibylové z~Masarykovy univerzity, tak státní Ústav zdravotnických informací a statistiky. 
 
 
+Nezávisle na modelovacím týmu se v~prvních týdnech pandemie zformovala skupina dobrovolníků okolo zmíněného Pavla Řeháka, Pavla Hroboně, Jakuba Drbohlava a Evy Blechové, snažící se vládě pomoci zavést takzvanou chytrou karanténu, zejména nastavit efektivní systém trasování rizikových kontaktů. Na konci května, kdy se mnohým zdálo, že epidemie končí, zformulovala skupina materiál {\em Systém rychlé reakce na případnou druhou vlnu covid-19 a další epidemie}\footnote{\url{https://texty.hlidacstatu.cz/system-rychle-reakce-na-pripadnou-druhou-vlnu-covid-19-a-dalsi-epidemie/}}, ve kterém navrhla 32 kroků, které měly zemi připravit na očekávanou podzimní vlnu. 
+
+Spojením „trasovací“ a „modelovací“ skupiny pak v~létě 2020 vzniklo Centrum pro modelování biologických a společenských procesů (BISOP).
+ Formálně jde o~zapsaný ústav, prakticky o~platformu zastřešující spolupráci skupiny, jejíž členové se účastní buď jako dobrovolníci, nebo spolupráci spojují s~aktivitami ve svých domovských institucích. Jako jeden z hlavních přínosů skupiny lze vidět její multidisciplinaritu, konkrétně fakt, že její výstupy vznikají jako výsledek diskuse představitelek a představitelů různých oborů, a mohou tak reflektovat multidisciplinární podstatu problémů, jako je současná pandemie.
+
+Téměř okamžitě po svém vzniku se Centrum pro modelování biologických a společenských procesů zapojilo do celospolečenské diskuse, ať již se jednalo o~popularizaci vědeckého přístupu k~pandemii či o~konkrétní otázky týkající se vývoje epidemie a vlivu protiepidemických opatření, později též očkování. René Levínský se podílel na přípravě protiepidemického systému PES a byl jedním z~členů Mezioborové skupiny pro epidemické situace (MeSES). Hlas BISOP, propagující vědecký přístup k pandemii, byl v~médiích nepřeslechnutelný. 
+
+Modely, v rámci BISOP dále vyvíjené, průběžně sloužily jako podklady pro rozličné formální i neformální expertní skupiny, ať už to byla na jaře 2020 první poradní skupina sdružená okolo Pavla Řeháka, na počátku podzimní vlny 2020 neformální skupina okolo Josefa Šlerky, Jana Kulveita a Romana Prymuly a posléze i na jaře 2021 v rámci MeSES.
+
+Názory členů BISOP zněly i v~tehdejších zjitřených diskusích, ať už s~jednotlivci či skupinami zpochybňujícími hlavní proud vědeckého poznání nebo se zastánci promoření -- BISOP v~době, kdy nebylo dostupné očkování, důsledně zastával strategii omezování množství viru v~populaci. Působení BISOP se však poněkud překvapivě stalo terčem kritiky i ze strany části vědecké obce, zejména kvůli aplikaci výsledků, které dosud neprošly recenzním řízením. Kromě toho musel BISOP v rámci veřejné debaty obhajovat i samotnou relevantnost matematického modelování ve spojení s pandemií. I tato část veřejné debaty se do této knihy promítá. 
+
+Co se týče striktního prosazování vědeckého přístupu a otázky promoření, dává čas členům BISOP postupně za pravdu: různá „alternativní fakta“, jako například tvrzení o~zázračnosti ivermektinu nebo o~škodlivosti roušek jsou postupně vyvracena a také se ukazuje, že zavádění opatření až v~okamžiku zahlcení zdravotnictví vedlo ke zbytečným ekonomickým a lidským ztrátám. Kritiku „rychlé vědy“ je však potřeba nebrat na lehkou váhu a v~konkrétních situacích vždy zvažovat, zda čekat na nezpochybnitelné ověření nebo zda jednat. V~situaci roku 2020, kdy měla vláda tendenci naslouchat výše zmíněným „alternativám“, byla druhá možnost evidentně tou správnou volbou.
 
 
+Kniha, kterou držíte v ruce, je sborníkem příspěvků z~konference Poučení z~pandemie COVID-19 konané v~polovině června 2021,\footnote{\url{https://www.bisop.eu/konference-pouceni-z-pandemie-covid-19/}}. Tento sborník tak mapuje mnoho dimenzí pandemie prostřednictvím vědeckého pohledu na ně. Přesněji řečeno, mapuje východiska a výsledky práce BISOP od počátku pandemie do léta 2021. Jedná se tak o příspěvek do diskuse k tématu, o němž bylo vyprodukováno bezprecedentní množství informací (a dezinformací). V této záplavě informací může být složité se zorientovat, a proto se snaží celý tento sborník srozumitelnou formou seznámit čtenáře z řad laické i odborné veřejnosti jak s obecnými metodami a poznatky vážícími se ke covidu-19 a epidemiím, tak s výsledky konkrétních studií zaměřujících se na specifické případy, s nimiž byla Česká republika během pandemie konfrontována.
 
-Při čtení příspěvků je třeba mít na paměti, že vznikaly v polovině roku 2021, odrážejí tedy tehdejší stav věcí a tehdejší stav poznání. Ve svém souhrnu však přesto mohou poskytnout ucelený obrázek o prvním roce pandemie, jejím (částečném) poznávání a jejím (ne)zvládání ze strany společnosti. V neposlední řadě jsou dokumentem o působení jedné vědecké iniciativy a do jisté míry dělají jakousi symbolickou tečku za jejím zakladatelským obdobím.
 
+Jednotlivé příspěvky jsou rozčleněny do tří částí. Příspěvky v první části sborníku se soustředí na obecnější metody a východiska vědeckého chápání epidemií a na základní poznatky o koronaviru SARS-CoV-2. První třetina sborníku tak slouží i jako úvod umožňující čtenářům plnou orientaci ve zbývajících kapitolách. Druhá a také nejobsáhlejší třetina kapitol představuje aplikace jednotlivých modelů a přístupů v nejrůznějších situacích týkajících se pandemie a jejího zvládání v Česku. Závěrečná třetí část pak nabízí zhodnocení dopadů pandemie a úvahy nad výhledy do budoucna nejen v pandemii, ale i po ní.
 
+Je třeba upozornit, že k dostatečnému pochopení prezentovaného materiálu je nezbytné orientovat se v kontextu událostí a situace z doby začátku pandemie. Čtenářům, kteří tento kontext postrádají, doporučujeme vynikající publikace \cite{kubal1} a \cite{kubal2}.
+Při čtení příspěvků je též třeba mít na paměti, že vznikaly v~polovině roku 2021, odrážejí tedy tehdejší stav věcí a tehdejší stav poznání. Ve svém souhrnu přesto mohou poskytnout ucelený obrázek o~prvním roce pandemie, jejím (částečném) poznávání a jejím (ne)zvládání ze strany společnosti. V~neposlední řadě jsou dokumentem o~působení jedné vědecké iniciativy.
